# NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md
scripts/: visualize.py
src/: Entry.cpp  EntryGPU.cpp  util.h
src/cl_wrapper/: cl_helper.h
src/kernels/: backprop.c  backprop.cl
src/neural_network/: LayerDescriptor.h  matrix.h  neural_network.h  types.h
src/reader/: data_reader.h  mnist_reader_common.hpp
